# hpc-project

./: .gitattributes  .gitignore  CMakeLists.txt  ImplementationDetails.txt  README.md  build.sh  cluster.cpp  install_boost.sh  load_modules.sh  serial_timing.csv  validation.sh
cuda_src/: cluster.cu  cluster.hpp  main.cpp  point.hpp
cudasrc/: cluster.cpp  cluster.cu  main.cpp
data/: spotify_short.csv
mpi_cuda_src/: a.out  cluster.cpp  cluster.cu  cluster.h  cluster.hpp  cluster_cuda.cu  cluster_cuda.hpp  main.c  main.cpp
mpi_src/: cluster.cpp  cluster.hpp  main.cpp  point.hpp
omp_src/: cluster.cpp  cluster.hpp  main.cpp  strangeoutput.txt
ompsrc/: cluster.cpp  main.cpp  point.hpp  strangeoutput.txt
scaling_study/: run.sh  scaling_study.py  slurm_run_cuda.sh  slurm_run_cuda_mpi.sh  slurm_run_mpi.sh  slurm_run_omp.sh  slurm_run_serial.sh  test.csv  time_execution.py  validation.sh  visualization.py
serial_src/: main.cpp
src/: cluster.cpp  cluster.hpp  cuda_cluster.cu  cuda_cluster.hpp  distributed_cluster.cpp  distributed_cluster.hpp  main.cpp  point.hpp  shared_cluster.cpp  shared_cluster.hpp
